# apertium-ui

./: .quickly  AUTHORS  README  apertium-ui.desktop.in  setup.py  setup.py~
.bzr/checkout/: dirstate
apertium_ui/: AboutApertiumUiDialog.py  ApertiumUiWindow.py  ApertiumUiWindow.py~  PreferencesApertiumUiDialog.py  __init__.py  glade.py
apertium_ui_lib/: AboutDialog.py  Builder.py  PreferencesDialog.py  Window.py  __init__.py  apertium_uiconfig.py  helpers.py
data/glib-2.0/schemas/: gschemas.compiled  net.launchpad.apertium-ui.gschema.xml
data/ui/: AboutApertiumUiDialog.ui  ApertiumUiWindow.ui  PreferencesApertiumUiDialog.ui  about_apertium_ui_dialog.xml  apertium_ui_window.xml  preferences_apertium_ui_dialog.xml
g/apertium-tolk-0.2/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  __init__.py  aclocal.m4  apertium-tolk  apertium-tolk.1  apertium-tolk.desktop.in.in  configure  configure.in  i18n.py  prefix.py  prefix.py.in  py-compile  tolk.glade
g/apertium-tolk-0.2/po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  af.po  az.po  bg.po  ca.po  cy.po  da.po  de.po  en.po  eo.po  es.po  eu.po  fi.po  fr.po  ga.po  gl.po  hu.po  is.po  it.po  mk.po  nap.po  nl.po  oc.po  pl.po  pms.po  ro.po  ru.po  se.po  sh.po  sl.po  tg.po  tr.po  ur.po  vi.po
help/C/: index.page  preferences.page
tests/: test_example.py  test_lint.py
